@@ -13,7 +13,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Stream;
 
 public final class Campaign {
@@ -98,26 +98,28 @@ public final class Campaign {
           }
         })
         .filter(Objects::nonNull)
-        .findFirst().orElseGet(() -> SavedGame.invalid(""));
+        .findFirst().orElseGet(() -> new InvalidSavedGame(""));
     } catch(final Throwable e) {
       LOGGER.info("Failed to load save", e);
       return null;
     }
   }
 
-  public List<SavedGame> loadAllSaves() {
-    final List<SavedGame> saves = new ArrayList<>();
+  public List<CompletableFuture<SavedGame>> loadAllSaves() {
+    final List<CompletableFuture<SavedGame>> saves = new ArrayList<>();
 
     for(final Path child : this.getSaves()) {
       final String filename = child.getFileName().toString();
       final String name = filename.substring(0, filename.lastIndexOf('.'));
 
-      try {
-        saves.add(this.loadGame(name));
-      } catch(final InvalidSaveException e) {
-        LOGGER.warn("Failed to load save " + filename, e);
-        saves.add(SavedGame.invalid(name));
-      }
+      saves.add(new CompletableFuture<SavedGame>().completeAsync(() -> {
+        try {
+          return this.loadGame(name);
+        } catch(final InvalidSaveException e) {
+          LOGGER.warn("Failed to load save " + filename, e);
+          return new InvalidSavedGame(name);
+        }
+      }));
     }
 
     return saves;
@@ -151,7 +153,7 @@ public final class Campaign {
     try(final Stream<Path> children = IoHelper.childrenSortedByDate(campaignPath, SaveManager.SAVE_MATCHER)) {
       return children
         .map(Path::getFileName)
-        .collect(Collectors.toList());
+        .toList();
     } catch(final IOException e) {
       throw new RuntimeException(e);
     }
